--- a/src/main/resources/com/example/cursova/Synevyr.fxml
+++ b/src/main/resources/com/example/cursova/Synevyr.fxml
@@ -1,24 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-<?import javafx.scene.web.WebView?>
-
-<AnchorPane prefHeight="790.0" prefWidth="1550.0" style="-fx-background-color: BFD8AF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cursova.Synevyr">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?><?import javafx.scene.control.Button?><?import javafx.scene.control.Separator?><?import javafx.scene.control.Tab?><?import javafx.scene.control.TabPane?><?import javafx.scene.control.TextArea?><?import javafx.scene.image.Image?><?import javafx.scene.image.ImageView?><?import javafx.scene.layout.AnchorPane?><?import javafx.scene.text.Font?><?import javafx.scene.text.Text?><?import javafx.scene.web.WebView?><AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cursova.Synevyr" prefHeight="790.0" prefWidth="1550.0" style="-fx-background-color: BFD8AF;">
    <children>
       <AnchorPane layoutY="93.0" prefHeight="700.0" prefWidth="1550.0" style="-fx-background-color: white;">
          <children>
-            <ImageView fx:id="imageView1" fitHeight="327.0" fitWidth="490.0" layoutX="41.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="327.0" fitWidth="490.0" fx:id="imageView1" layoutX="41.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../img/Синевир.jpg" />
+                  <Image url="@../../../img/Синевир.jpg"/>
                </image>
             </ImageView>
             <TabPane layoutX="586.0" prefHeight="700.0" prefWidth="965.0" tabClosingPolicy="UNAVAILABLE">
@@ -27,14 +13,14 @@
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <ImageView fx:id="imageView2" fitHeight="327.0" fitWidth="490.0" layoutX="238.0" layoutY="336.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="327.0" fitWidth="490.0" fx:id="imageView2" layoutX="238.0" layoutY="336.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../img/Синевир_1.jpg" />
+                                    <Image url="@../../../img/Синевир_1.jpg"/>
                                  </image>
                               </ImageView>
-                              <TextArea fx:id="textArea" blendMode="HARD_LIGHT" layoutX="4.0" layoutY="6.0" maxWidth="950.0" minHeight="327.0" minWidth="950.0" prefHeight="327.0" prefWidth="950.0" style="-fx-focus-color: -fx-control-inner-background; -fx-text-fill: black; -fx-faint-focus-color: transparent;" wrapText="true">
+                              <TextArea blendMode="HARD_LIGHT" fx:id="textArea" layoutX="4.0" layoutY="6.0" maxWidth="950.0" minHeight="327.0" minWidth="950.0" prefHeight="327.0" prefWidth="950.0" style="-fx-focus-color: -fx-control-inner-background; -fx-text-fill: black; -fx-faint-focus-color: transparent;" text="текст" wrapText="true">
                                  <font>
-                                    <Font name="Comic Sans MS Bold" size="18.0" />
+                                    <Font name="Comic Sans MS Bold" size="18.0"/>
                                  </font>
                               </TextArea>
                            </children>
@@ -45,10 +31,10 @@
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <WebView fx:id="webView" layoutX="492.0" layoutY="53.0" prefHeight="550.0" prefWidth="440.0" />
-                              <TextArea fx:id="textArea2" blendMode="HARD_LIGHT" layoutX="14.0" layoutY="70.0" maxWidth="482.0" minHeight="514.0" minWidth="482.0" prefHeight="531.0" prefWidth="482.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+                              <WebView fx:id="webView" layoutX="492.0" layoutY="53.0" prefHeight="550.0" prefWidth="440.0"/>
+                              <TextArea blendMode="HARD_LIGHT" fx:id="textArea2" layoutX="14.0" layoutY="70.0" maxWidth="482.0" minHeight="514.0" minWidth="482.0" prefHeight="531.0" prefWidth="482.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" text="текст" wrapText="true">
                                  <font>
-                                    <Font name="Comic Sans MS Bold" size="18.0" />
+                                    <Font name="Comic Sans MS Bold" size="18.0"/>
                                  </font>
                               </TextArea>
                            </children></AnchorPane>
@@ -58,18 +44,18 @@
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <ImageView fx:id="imageView3" fitHeight="292.0" fitWidth="441.0" layoutX="490.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="292.0" fitWidth="441.0" fx:id="imageView3" layoutX="490.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../img/Синевир_2.jpg" />
+                                    <Image url="@../../../img/Синевир_2.jpg"/>
                                  </image></ImageView>
-                              <TextArea fx:id="textArea3" blendMode="HARD_LIGHT" layoutX="8.0" layoutY="32.0" maxWidth="473.0" minHeight="314.0" minWidth="473.0" prefHeight="314.0" prefWidth="473.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+                              <TextArea blendMode="HARD_LIGHT" fx:id="textArea3" layoutX="8.0" layoutY="32.0" maxWidth="473.0" minHeight="314.0" minWidth="473.0" prefHeight="314.0" prefWidth="473.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" text="текст" wrapText="true">
                                  <font>
-                                    <Font name="Comic Sans MS Bold" size="18.0" />
+                                    <Font name="Comic Sans MS Bold" size="18.0"/>
                                  </font>
                               </TextArea>
-                              <TextArea fx:id="textArea4" blendMode="HARD_LIGHT" layoutX="8.0" layoutY="363.0" maxWidth="942.0" minHeight="283.0" minWidth="942.0" prefHeight="283.0" prefWidth="942.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+                              <TextArea blendMode="HARD_LIGHT" fx:id="textArea4" layoutX="8.0" layoutY="363.0" maxWidth="942.0" minHeight="283.0" minWidth="942.0" prefHeight="283.0" prefWidth="942.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" text="текст" wrapText="true">
                                  <font>
-                                    <Font name="Comic Sans MS Bold" size="18.0" />
+                                    <Font name="Comic Sans MS Bold" size="18.0"/>
                                  </font>
                               </TextArea>
                            </children></AnchorPane>
@@ -77,27 +63,27 @@
                   </Tab>
               </tabs>
             </TabPane>
-            <Separator halignment="LEFT" layoutX="575.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="22.0" />
-            <TextArea fx:id="textArea5" blendMode="HARD_LIGHT" layoutX="28.0" layoutY="394.0" maxWidth="515.0" minHeight="262.0" minWidth="515.0" prefHeight="262.0" prefWidth="515.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+            <Separator halignment="LEFT" layoutX="575.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="22.0"/>
+            <TextArea blendMode="HARD_LIGHT" fx:id="textArea5" layoutX="28.0" layoutY="394.0" maxWidth="515.0" minHeight="262.0" minWidth="515.0" prefHeight="262.0" prefWidth="515.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" text="текст" wrapText="true">
                <font>
-                  <Font name="Comic Sans MS Bold" size="18.0" />
+                  <Font name="Comic Sans MS Bold" size="18.0"/>
                </font>
             </TextArea>
          </children>
       </AnchorPane>
       <Button fx:id="Btn_return" layoutX="37.0" layoutY="31.0" mnemonicParsing="false" text="Повернутись">
          <font>
-            <Font name="Comic Sans MS" size="18.0" />
+            <Font name="Comic Sans MS" size="18.0"/>
          </font>
       </Button>
       <Button fx:id="saveButton" layoutX="1401.0" layoutY="31.0" mnemonicParsing="false" onAction="#saveButtonClicked" text="Зберегти">
          <font>
-            <Font name="Comic Sans MS" size="18.0" />
+            <Font name="Comic Sans MS" size="18.0"/>
          </font>
       </Button>
       <Text fill="#294b29" layoutX="559.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Озеро Синевир" textAlignment="CENTER">
          <font>
-            <Font name="Comic Sans MS" size="60.0" />
+            <Font name="Comic Sans MS" size="60.0"/>
          </font>
       </Text>
    </children>
