--- a/src/main/resources/com/example/cursova/Waterfall.fxml
+++ b/src/main/resources/com/example/cursova/Waterfall.fxml
@@ -1,10 +1,24 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?><?import javafx.scene.control.Button?><?import javafx.scene.control.Label?><?import javafx.scene.control.Separator?><?import javafx.scene.control.Tab?><?import javafx.scene.control.TabPane?><?import javafx.scene.control.TextArea?><?import javafx.scene.image.Image?><?import javafx.scene.image.ImageView?><?import javafx.scene.layout.AnchorPane?><?import javafx.scene.text.Font?><?import javafx.scene.web.WebView?><AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cursova.Waterfall" prefHeight="790.0" prefWidth="1550.0" style="-fx-background-color: BFD8AF;">
+<?xml version="1.0" encoding="UTF-8"?>
+
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.web.WebView?>
+
+<AnchorPane prefHeight="790.0" prefWidth="1550.0" style="-fx-background-color: BFD8AF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cursova.Waterfall">
     <children>
         <AnchorPane layoutY="93.0" prefHeight="700.0" prefWidth="1550.0" style="-fx-background-color: white;">
             <children>
-                <ImageView fitHeight="327.0" fitWidth="490.0" fx:id="imageView1" layoutX="41.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fx:id="imageView1" fitHeight="327.0" fitWidth="490.0" layoutX="41.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../../../img/Шипіт.jpg"/>
+                        <Image url="@../../../img/Шипіт.jpg" />
                     </image>
                 </ImageView>
                 <TabPane layoutX="588.0" prefHeight="700.0" prefWidth="965.0" tabClosingPolicy="UNAVAILABLE">
@@ -13,14 +27,14 @@
                             <content>
                                 <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                     <children>
-                                        <ImageView fitHeight="316.0" fitWidth="465.0" fx:id="imageView2" layoutX="265.0" layoutY="324.0" pickOnBounds="true" preserveRatio="true">
+                                        <ImageView fx:id="imageView2" fitHeight="316.0" fitWidth="465.0" layoutX="265.0" layoutY="324.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@../../../img/Шипіт_1.jpg"/>
+                                                <Image url="@../../../img/Шипіт_1.jpg" />
                                             </image>
                                         </ImageView>
-                              <TextArea blendMode="HARD_LIGHT" fx:id="textArea" layoutX="10.0" layoutY="14.0" maxWidth="943.0" minHeight="299.0" minWidth="939.0" prefHeight="299.0" prefWidth="939.0" style="-fx-focus-color: -fx-control-inner-background; -fx-text-fill: black; -fx-faint-focus-color: transparent;" wrapText="true">
+                              <TextArea fx:id="textArea" blendMode="HARD_LIGHT" layoutX="10.0" layoutY="14.0" maxWidth="943.0" minHeight="299.0" minWidth="939.0" prefHeight="299.0" prefWidth="939.0" style="-fx-focus-color: -fx-control-inner-background; -fx-text-fill: black; -fx-faint-focus-color: transparent;" text="текст" wrapText="true">
                                  <font>
-                                    <Font name="Comic Sans MS Bold" size="18.0"/>
+                                    <Font name="Comic Sans MS Bold" size="18.0" />
                                  </font>
                               </TextArea>
                                     </children>
@@ -31,10 +45,10 @@
                             <content>
                                 <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                     <children>
-                                        <WebView fx:id="webView" layoutX="492.0" layoutY="65.0" prefHeight="550.0" prefWidth="440.0"/>
-                              <TextArea blendMode="HARD_LIGHT" fx:id="textArea2" layoutX="14.0" layoutY="83.0" maxWidth="482.0" minHeight="514.0" minWidth="475.0" prefHeight="531.0" prefWidth="475.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+                                        <WebView fx:id="webView" layoutX="492.0" layoutY="65.0" prefHeight="550.0" prefWidth="440.0" />
+                              <TextArea fx:id="textArea2" blendMode="HARD_LIGHT" layoutX="14.0" layoutY="83.0" maxWidth="482.0" minHeight="514.0" minWidth="475.0" prefHeight="531.0" prefWidth="475.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" text="текст" wrapText="true">
                                  <font>
-                                    <Font name="Comic Sans MS Bold" size="18.0"/>
+                                    <Font name="Comic Sans MS Bold" size="18.0" />
                                  </font>
                               </TextArea>
                                     </children></AnchorPane>
@@ -44,19 +58,19 @@
                             <content>
                                 <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                     <children>
-                                        <ImageView fitHeight="338.0" fitWidth="468.0" fx:id="imageView3" layoutX="465.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true">
+                                        <ImageView fx:id="imageView3" fitHeight="338.0" fitWidth="468.0" layoutX="465.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@../../../img/Шипіт_2.jpg"/>
+                                                <Image url="@../../../img/Шипіт_2.jpg" />
                                             </image>
                                         </ImageView>
-                              <TextArea blendMode="HARD_LIGHT" fx:id="textArea3" layoutX="8.0" layoutY="40.0" maxWidth="473.0" minHeight="314.0" minWidth="441.0" prefHeight="345.0" prefWidth="450.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+                              <TextArea fx:id="textArea3" blendMode="HARD_LIGHT" layoutX="8.0" layoutY="40.0" maxWidth="473.0" minHeight="314.0" minWidth="441.0" prefHeight="345.0" prefWidth="450.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" text="текст" wrapText="true">
                                  <font>
-                                    <Font name="Comic Sans MS Bold" size="18.0"/>
+                                    <Font name="Comic Sans MS Bold" size="18.0" />
                                  </font>
                               </TextArea>
-                              <TextArea blendMode="HARD_LIGHT" fx:id="textArea4" layoutX="15.0" layoutY="394.0" maxWidth="942.0" minHeight="247.0" minWidth="934.0" prefHeight="254.0" prefWidth="934.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+                              <TextArea fx:id="textArea4" blendMode="HARD_LIGHT" layoutX="15.0" layoutY="394.0" maxWidth="942.0" minHeight="247.0" minWidth="934.0" prefHeight="254.0" prefWidth="934.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" text="текст" wrapText="true">
                                  <font>
-                                    <Font name="Comic Sans MS Bold" size="18.0"/>
+                                    <Font name="Comic Sans MS Bold" size="18.0" />
                                  </font>
                               </TextArea>
                                     </children></AnchorPane>
@@ -64,27 +78,27 @@
                         </Tab>
                     </tabs>
                 </TabPane>
-                <Separator halignment="LEFT" layoutX="575.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="22.0"/>
-            <TextArea blendMode="HARD_LIGHT" fx:id="textArea5" layoutX="28.0" layoutY="394.0" maxWidth="515.0" minHeight="262.0" minWidth="515.0" prefHeight="262.0" prefWidth="515.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" wrapText="true">
+                <Separator halignment="LEFT" layoutX="575.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="22.0" />
+            <TextArea fx:id="textArea5" blendMode="HARD_LIGHT" layoutX="28.0" layoutY="394.0" maxWidth="515.0" minHeight="262.0" minWidth="515.0" prefHeight="262.0" prefWidth="515.0" style="-fx-background-color: white; -fx-border-color: white; -fx-focus-color: -fx-control-inner-background; -fx-faint-focus-color: transparent; -fx-text-fill: black; -fx-background: white;" text="текст" wrapText="true">
                <font>
-                  <Font name="Comic Sans MS Bold" size="18.0"/>
+                  <Font name="Comic Sans MS Bold" size="18.0" />
                </font>
             </TextArea>
             </children>
         </AnchorPane>
         <Label layoutX="537.0" text="Водоспад Шипіт" textFill="#294b29">
             <font>
-                <Font name="Comic Sans MS" size="60.0"/>
+                <Font name="Comic Sans MS" size="60.0" />
             </font>
         </Label>
         <Button fx:id="Btn_return" layoutX="37.0" layoutY="31.0" mnemonicParsing="false" text="Повернутись">
             <font>
-                <Font name="Comic Sans MS" size="18.0"/>
+                <Font name="Comic Sans MS" size="18.0" />
             </font>
         </Button>
       <Button fx:id="saveButton" layoutX="1401.0" layoutY="31.0" mnemonicParsing="false" onAction="#saveButtonClicked" text="Зберегти">
          <font>
-            <Font name="Comic Sans MS" size="18.0"/>
+            <Font name="Comic Sans MS" size="18.0" />
          </font>
       </Button>
     </children>
